[gd_scene load_steps=24 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Tileset/Tilesets.tres" type="TileSet" id=2]
[ext_resource path="res://BrownMan/BrownMan.tscn" type="PackedScene" id=3]
[ext_resource path="res://BlueMan/BlueMan.tscn" type="PackedScene" id=4]
[ext_resource path="res://ChestFull/ChestFull.tscn" type="PackedScene" id=5]
[ext_resource path="res://ChestEmpty/ChestEmpty.tscn" type="PackedScene" id=6]
[ext_resource path="res://Bottles/GreenBottle.tscn" type="PackedScene" id=7]
[ext_resource path="res://TreeMan/TreeMan.tscn" type="PackedScene" id=8]
[ext_resource path="res://Bottles/YellowBottle.tscn" type="PackedScene" id=9]
[ext_resource path="res://SlimeMan/SlimeMan.tscn" type="PackedScene" id=10]
[ext_resource path="res://WhiteMan/WhiteMan.tscn" type="PackedScene" id=11]
[ext_resource path="res://Bottles/RedBottle.tscn" type="PackedScene" id=12]
[ext_resource path="res://Bottles/BlueBottle.tscn" type="PackedScene" id=13]
[ext_resource path="res://Door/Door2to3.tscn" type="PackedScene" id=14]
[ext_resource path="res://Level/Level2.gd" type="Script" id=15]
[ext_resource path="res://Decorate/LLight.png" type="Texture" id=16]
[ext_resource path="res://Decorate/VLight.png" type="Texture" id=17]
[ext_resource path="res://Decorate/2Light.png" type="Texture" id=18]
[ext_resource path="res://Decorate/fonts.png" type="Texture" id=19]
[ext_resource path="res://Decorate/ELight.png" type="Texture" id=20]
[ext_resource path="res://Water/WaterRed.tscn" type="PackedScene" id=21]
[ext_resource path="res://Water/WaterBlue.tscn" type="PackedScene" id=22]
[ext_resource path="res://Audio/HitSound.tscn" type="PackedScene" id=23]

[node name="Level2" type="Node"]
script = ExtResource( 15 )

[node name="FloorTileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
collision_mask = 0
format = 1
tile_data = PoolIntArray( -589820, 0, 0, -589778, 0, 0, -589777, 0, 0, -589775, 0, 0, -524284, 6, 0, -524283, 0, 0, -524282, 1, 0, -524281, 0, 0, -524242, 0, 0, -524241, 0, 0, -524240, 0, 0, -524239, 5, 0, -458748, 0, 0, -458747, 4, 0, -458746, 0, 0, -458745, 0, 0, -458706, 7, 0, -458705, 0, 0, -458704, 1, 0, -458703, 0, 0, -393212, 0, 0, -393211, 0, 0, -393210, 0, 0, -393209, 5, 0, -393196, 0, 0, -393193, 0, 0, -393192, 0, 0, -393170, 0, 0, -393169, 2, 0, -393168, 0, 0, -393167, 0, 0, -327676, 0, 0, -327675, 0, 0, -327674, 2, 0, -327673, 0, 0, -327662, 0, 0, -327661, 0, 0, -327660, 0, 0, -327659, 6, 0, -327658, 0, 0, -327657, 0, 0, -327656, 5, 0, -327651, 0, 0, -327650, 4, 0, -327649, 2, 0, -327648, 5, 0, -327647, 0, 0, -327646, 0, 0, -327633, 0, 0, -327632, 6, 0, -327631, 0, 0, -262139, 7, 0, -262138, 0, 0, -262127, 0, 0, -262126, 0, 0, -262125, 0, 0, -262124, 0, 0, -262123, 0, 0, -262122, 0, 0, -262121, 2, 0, -262120, 0, 0, -262115, 0, 0, -262114, 0, 0, -262113, 0, 0, -262112, 0, 0, -262111, 0, 0, -262110, 0, 0, -262109, 0, 0, -262097, 0, 0, -262096, 0, 0, -196603, 0, 0, -196602, 0, 0, -196592, 0, 0, -196591, 3, 0, -196590, 2, 0, -196589, 0, 0, -196588, 1, 0, -196587, 0, 0, -196586, 0, 0, -196585, 0, 0, -196584, 0, 0, -196579, 6, 0, -196578, 0, 0, -196577, 0, 0, -196576, 1, 0, -196575, 0, 0, -196574, 0, 0, -196573, 0, 0, -196572, 6, 0, -196561, 0, 0, -196560, 0, 0, -196555, 0, 0, -196554, 0, 0, -196553, 0, 0, -196552, 0, 0, -196551, 0, 0, -65540, 1, 0, -65539, 6, 0, -65538, 0, 0, -65537, 0, 0, -131072, 5, 0, -131067, 0, 0, -131066, 0, 0, -131056, 0, 0, -131055, 0, 0, -131054, 0, 0, -131042, 0, 0, -131041, 0, 0, -131040, 0, 0, -131039, 0, 0, -131038, 0, 0, -131037, 0, 0, -131036, 0, 0, -131035, 0, 0, -131025, 3, 0, -131024, 2, 0, -131020, 0, 0, -131019, 0, 0, -131018, 0, 0, -131017, 0, 0, -131016, 0, 0, -131015, 5, 0, -131014, 0, 0, -5, 0, 0, -4, 0, 0, -3, 0, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65531, 3, 0, -65530, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65500, 7, 0, -65499, 0, 0, -65498, 0, 0, -65497, 0, 0, -65489, 0, 0, -65488, 0, 0, -65487, 0, 0, -65486, 0, 0, -65485, 0, 0, -65484, 4, 0, -65483, 0, 0, -65482, 0, 0, -65481, 2, 0, -65480, 0, 0, -65479, 0, 0, -65478, 0, 0, -65477, 0, 0, 65530, 0, 0, 65531, 0, 0, 65532, 2, 0, 65533, 0, 0, 65534, 0, 0, 65535, 4, 0, 0, 2, 0, 1, 0, 0, 2, 1, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 5, 0, 13, 0, 0, 14, 7, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 36, 0, 0, 37, 0, 0, 38, 0, 0, 39, 5, 0, 40, 0, 0, 41, 0, 0, 42, 0, 0, 43, 0, 0, 44, 0, 0, 45, 0, 0, 46, 0, 0, 47, 0, 0, 48, 0, 0, 49, 0, 0, 50, 0, 0, 51, 0, 0, 52, 0, 0, 53, 0, 0, 54, 7, 0, 55, 0, 0, 56, 0, 0, 57, 0, 0, 58, 0, 0, 59, 0, 0, 131066, 0, 0, 131067, 7, 0, 131068, 0, 0, 131069, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 1, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 4, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 5, 0, 65573, 0, 0, 65574, 1, 0, 65575, 0, 0, 65576, 0, 0, 65577, 2, 0, 65578, 0, 0, 65579, 0, 0, 65580, 0, 0, 65581, 0, 0, 65582, 0, 0, 65583, 0, 0, 65584, 2, 0, 65585, 0, 0, 65586, 1, 0, 65587, 0, 0, 65588, 0, 0, 65589, 0, 0, 65590, 0, 0, 65591, 0, 0, 65592, 0, 0, 65593, 0, 0, 65594, 2, 0, 65595, 0, 0, 196602, 0, 0, 196603, 0, 0, 196604, 0, 0, 196605, 0, 0, 196606, 2, 0, 196607, 0, 0, 131072, 0, 0, 131073, 4, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 2, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 6, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 2, 0, 131087, 0, 0, 131088, 0, 0, 131089, 4, 0, 131096, 0, 0, 131097, 6, 0, 131098, 0, 0, 131099, 0, 0, 131100, 0, 0, 131101, 0, 0, 131109, 0, 0, 131110, 0, 0, 131111, 0, 0, 131112, 0, 0, 131113, 0, 0, 131114, 0, 0, 131115, 0, 0, 131116, 0, 0, 131117, 7, 0, 131118, 0, 0, 131119, 0, 0, 131120, 0, 0, 131121, 0, 0, 131122, 0, 0, 131123, 0, 0, 131124, 0, 0, 131125, 0, 0, 131126, 0, 0, 131127, 4, 0, 131128, 0, 0, 131129, 0, 0, 131130, 0, 0, 131131, 6, 0, 262139, 0, 0, 262140, 3, 0, 262141, 1, 0, 262142, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 6, 0, 196613, 7, 0, 196614, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196632, 0, 0, 196633, 0, 0, 196634, 0, 0, 196635, 0, 0, 196636, 5, 0, 196637, 0, 0, 196644, 3, 0, 196645, 0, 0, 196646, 0, 0, 196655, 2, 0, 196656, 0, 0, 196659, 0, 0, 196660, 0, 0, 196661, 3, 0, 196662, 0, 0, 196663, 2, 0, 196664, 0, 0, 196665, 0, 0, 196666, 1, 0, 327676, 0, 0, 327677, 0, 0, 327678, 0, 0, 327679, 5, 0, 262144, 0, 0, 262149, 0, 0, 262150, 0, 0, 262160, 4, 0, 262161, 0, 0, 262162, 6, 0, 262163, 1, 0, 262164, 0, 0, 262168, 0, 0, 262169, 4, 0, 262170, 0, 0, 262171, 1, 0, 262172, 0, 0, 262173, 0, 0, 262179, 0, 0, 262180, 2, 0, 262181, 0, 0, 262191, 0, 0, 262192, 0, 0, 262197, 0, 0, 262198, 0, 0, 262199, 0, 0, 262200, 5, 0, 262201, 0, 0, 327685, 0, 0, 327686, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 327702, 0, 0, 327703, 0, 0, 327704, 7, 0, 327705, 0, 0, 327706, 0, 0, 327707, 0, 0, 327708, 0, 0, 327709, 2, 0, 327710, 0, 0, 327711, 0, 0, 327712, 0, 0, 327713, 0, 0, 327714, 4, 0, 327715, 0, 0, 327716, 0, 0, 327727, 4, 0, 327728, 0, 0, 393221, 0, 0, 393222, 5, 0, 393234, 1, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 393238, 2, 0, 393239, 0, 0, 393240, 0, 0, 393241, 0, 0, 393242, 2, 0, 393243, 0, 0, 393244, 0, 0, 393245, 0, 0, 393246, 0, 0, 393247, 0, 0, 393248, 0, 0, 393249, 0, 0, 393250, 0, 0, 393251, 0, 0, 393263, 0, 0, 393264, 5, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458776, 3, 0, 458777, 0, 0, 458778, 0, 0, 458779, 0, 0, 458780, 0, 0, 458781, 0, 0, 458799, 0, 0, 458800, 0, 0, 524292, 6, 0, 524293, 1, 0, 524294, 0, 0, 524295, 3, 0, 524312, 0, 0, 524313, 1, 0, 524314, 0, 0, 524315, 0, 0, 524316, 0, 0, 524317, 6, 0, 524334, 1, 0, 524335, 2, 0, 524336, 0, 0, 524337, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589853, 0, 0, 589870, 3, 0, 589871, 0, 0, 589872, 0, 0, 589873, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 2, 0, 655384, 0, 0, 655385, 5, 0, 655386, 0, 0, 655387, 0, 0, 655388, 0, 0, 655389, 0, 0, 655406, 0, 0, 655407, 0, 0, 655408, 0, 0, 655409, 7, 0, 720920, 0, 0, 720921, 0, 0, 720922, 0, 0, 720923, 2, 0, 720924, 0, 0, 720925, 0, 0, 786456, 0, 0, 786457, 0, 0, 786458, 4, 0, 786459, 0, 0, 786460, 0, 0, 786461, 0, 0, 851992, 3, 0, 851993, 0, 0, 851994, 0, 0, 851995, 0, 0, 851996, 0, 0, 851997, 0, 0, 917528, 0, 0, 917529, 0, 0, 917530, 0, 0, 917531, 0, 0, 917532, 0, 0, 917533, 0, 0, 983064, 0, 0, 983065, 6, 0, 983066, 0, 0, 983067, 1, 0, 983068, 0, 0, 983069, 5, 0, 1048600, 0, 0, 1048601, 0, 0, 1048602, 0, 0, 1048603, 0, 0, 1048604, 0, 0, 1048605, 4, 0, 1114136, 0, 0, 1114137, 0, 0, 1114138, 0, 0, 1114139, 0, 0, 1114140, 3, 0, 1114141, 0, 0, 1179672, 0, 0, 1179673, 0, 0, 1179674, 0, 0, 1179675, 0, 0, 1179676, 0, 0, 1179677, 0, 0, 1245208, 0, 0, 1245209, 0, 0, 1245210, 2, 0, 1245211, 0, 0, 1245212, 0, 0, 1245213, 0, 0, 1310744, 0, 0, 1310745, 0, 0, 1310746, 0, 0, 1310747, 0, 0, 1310748, 0, 0, 1310749, 0, 0, 1376278, 0, 0, 1376279, 7, 0, 1376280, 1, 0, 1376281, 0, 0, 1376282, 0, 0, 1376283, 4, 0, 1376284, 0, 0, 1376285, 0, 0, 1376286, 0, 0, 1376287, 0, 0, 1441812, 3, 0, 1441813, 0, 0, 1441814, 0, 0, 1441815, 0, 0, 1441816, 0, 0, 1441817, 0, 0, 1441818, 3, 0, 1441819, 0, 0, 1441820, 2, 0, 1441821, 0, 0, 1441822, 0, 0, 1441823, 0, 0, 1441824, 1, 0, 1441825, 0, 0, 1441826, 0, 0, 1507346, 0, 0, 1507347, 0, 0, 1507348, 0, 0, 1507349, 0, 0, 1507350, 0, 0, 1507351, 0, 0, 1507352, 0, 0, 1507353, 0, 0, 1507354, 0, 0, 1507355, 0, 0, 1507356, 0, 0, 1507357, 0, 0, 1507358, 2, 0, 1507359, 0, 0, 1507360, 0, 0, 1507361, 0, 0, 1507362, 0, 0, 1572882, 0, 0, 1572883, 0, 0, 1572884, 2, 0, 1572885, 0, 0, 1572886, 0, 0, 1572887, 4, 0, 1572888, 2, 0, 1572889, 0, 0, 1572890, 0, 0, 1572891, 0, 0, 1572892, 6, 0, 1572893, 0, 0, 1572894, 0, 0, 1572895, 0, 0, 1572896, 0, 0, 1572897, 3, 0, 1572898, 0, 0, 1572899, 0, 0, 1638418, 0, 0, 1638419, 0, 0, 1638420, 0, 0, 1638421, 5, 0, 1638422, 0, 0, 1638423, 0, 0, 1638424, 0, 0, 1638425, 0, 0, 1638426, 0, 0, 1638427, 1, 0, 1638428, 0, 0, 1638429, 0, 0, 1638430, 0, 0, 1638431, 0, 0, 1638432, 0, 0, 1638433, 0, 0, 1638434, 5, 0, 1638435, 0, 0, 1703954, 0, 0, 1703955, 6, 0, 1703956, 0, 0, 1703957, 0, 0, 1703958, 0, 0, 1703959, 0, 0, 1703960, 0, 0, 1703961, 0, 0, 1703962, 0, 0, 1703963, 0, 0, 1703964, 0, 0, 1703965, 0, 0, 1703966, 0, 0, 1703967, 0, 0, 1703968, 4, 0, 1703969, 0, 0, 1703970, 0, 0, 1703971, 0, 0, 1769491, 0, 0, 1769492, 1, 0, 1769493, 0, 0, 1769494, 0, 0, 1769495, 0, 0, 1769496, 0, 0, 1769497, 0, 0, 1769498, 0, 0, 1769499, 0, 0, 1769500, 0, 0, 1769501, 0, 0, 1769502, 0, 0, 1769503, 0, 0, 1769504, 2, 0, 1769505, 1, 0, 1769506, 0, 0, 1769507, 0, 0, 1835028, 0, 0, 1835029, 0, 0, 1835030, 0, 0, 1835031, 0, 0, 1835032, 0, 0, 1835033, 0, 0, 1835034, 0, 0, 1835035, 0, 0, 1835036, 2, 0, 1835037, 0, 0, 1835038, 0, 0, 1835039, 0, 0, 1835040, 0, 0, 1835041, 3, 0, 1900565, 0, 0, 1900566, 0, 0, 1900567, 3, 0, 1900568, 2, 0, 1900569, 0, 0, 1900570, 0, 0, 1900571, 0, 0, 1900572, 0, 0, 1900573, 0, 0, 1900574, 0, 0, 1900575, 0, 0, 1966104, 0, 0 )

[node name="WallTileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
collision_mask = 2
format = 1
tile_data = PoolIntArray( -655357, 39, 0, -655356, 37, 0, -655355, 37, 0, -655354, 37, 0, -655353, 37, 0, -655352, 40, 0, -655315, 39, 0, -655314, 37, 0, -655313, 37, 0, -655312, 37, 0, -655311, 37, 0, -655310, 40, 0, -589821, 41, 0, -589820, 13, 0, -589819, 13, 0, -589818, 13, 0, -589817, 13, 0, -589816, 42, 0, -589779, 1610612778, 0, -589778, 8, 0, -589777, 8, 0, -589776, 8, 0, -589775, 8, 0, -589774, 1610612777, 0, -524285, 41, 0, -524280, 42, 0, -524243, 536870954, 0, -524238, 536870953, 0, -458749, 41, 0, -458744, 42, 0, -458734, 39, 0, -458733, 37, 0, -458732, 37, 0, -458731, 37, 0, -458730, 37, 0, -458729, 37, 0, -458728, 35, 0, -458723, 34, 0, -458722, 37, 0, -458721, 37, 0, -458720, 37, 0, -458719, 37, 0, -458718, 37, 0, -458717, 40, 0, -458707, 536870954, 0, -458702, 536870953, 0, -393213, 41, 0, -393212, 31, 0, -393209, 30, 0, -393208, 42, 0, -393199, 39, 0, -393198, 29, 0, -393197, 13, 0, -393196, 13, 0, -393195, 13, 0, -393194, 13, 0, -393193, 13, 0, -393192, 11, 0, -393187, 10, 0, -393186, 13, 0, -393185, 13, 0, -393184, 13, 0, -393183, 13, 0, -393182, 13, 0, -393181, 28, 0, -393180, 40, 0, -393171, 536870954, 0, -393170, 31, 0, -393167, 30, 0, -393166, 536870953, 0, -327677, 43, 0, -327676, 536870922, 0, -327673, 536870923, 0, -327672, 44, 0, -327664, 39, 0, -327663, 29, 0, -327662, 14, 0, -327656, 41, 0, -327651, 42, 0, -327645, 12, 0, -327644, 28, 0, -327643, 40, 0, -327635, 43, 0, -327634, 11, 0, -327631, 10, 0, -327630, 44, 0, -196613, 39, 0, -196612, 37, 0, -196611, 37, 0, -196610, 37, 0, -196609, 37, 0, -262144, 37, 0, -262143, 40, 0, -262140, 41, 0, -262137, 42, 0, -262129, 39, 0, -262128, 29, 0, -262127, 14, 0, -262120, 41, 0, -262115, 42, 0, -262108, 12, 0, -262107, 28, 0, -262106, 40, 0, -262098, 536870954, 0, -262095, 536870953, 0, -262092, 39, 0, -262091, 37, 0, -262090, 37, 0, -262089, 37, 0, -262088, 37, 0, -262087, 37, 0, -262086, 40, 0, -131078, 39, 0, -131077, 29, 0, -131076, 13, 0, -131075, 13, 0, -131074, 13, 0, -131073, 13, 0, -196608, 13, 0, -196607, 28, 0, -196606, 40, 0, -196604, 41, 0, -196601, 42, 0, -196594, 39, 0, -196593, 29, 0, -196592, 14, 0, -196589, 34, 0, -196588, 37, 0, -196587, 37, 0, -196586, 37, 0, -196585, 37, 0, -196584, 29, 0, -196579, 28, 0, -196578, 37, 0, -196577, 37, 0, -196576, 37, 0, -196575, 37, 0, -196574, 35, 0, -196571, 12, 0, -196570, 28, 0, -196569, 40, 0, -196562, 536870954, 0, -196559, 536870953, 0, -196557, 39, 0, -196556, 29, 0, -196555, 13, 0, -196554, 13, 0, -196553, 13, 0, -196552, 13, 0, -196551, 13, 0, -196550, 28, 0, -196549, 40, 0, -65543, 39, 0, -65542, 536870940, 0, -65541, 14, 0, -131071, 8, 0, -131070, 28, 0, -131069, 37, 0, -131068, 29, 0, -131065, 28, 0, -131064, 37, 0, -131063, 37, 0, -131062, 37, 0, -131061, 37, 0, -131060, 37, 0, -131059, 37, 0, -131058, 29, 0, -131057, 14, 0, -131054, 34, 0, -131053, 10, 0, -131052, 13, 0, -131051, 13, 0, -131050, 13, 0, -131049, 13, 0, -131048, 14, 0, -131043, 12, 0, -131042, 13, 0, -131041, 13, 0, -131040, 13, 0, -131039, 13, 0, -131038, 11, 0, -131037, 35, 0, -131034, 12, 0, -131033, 28, 0, -131032, 37, 0, -131031, 37, 0, -131030, 37, 0, -131029, 37, 0, -131028, 37, 0, -131027, 37, 0, -131026, 29, 0, -131023, 28, 0, -131022, 37, 0, -131021, 29, 0, -131020, 14, 0, -131014, 8, 0, -131013, 28, 0, -131012, 40, 0, -7, 41, 0, -6, 14, 0, -65534, 8, 0, -65533, 13, 0, -65532, 14, 0, -65529, 8, 0, -65528, 13, 0, -65527, 13, 0, -65526, 13, 0, -65525, 13, 0, -65524, 13, 0, -65523, 13, 0, -65522, 14, 0, -65519, 34, 0, -65518, 10, 0, -65517, 44, 0, -65502, 43, 0, -65501, 11, 0, -65500, 35, 0, -65497, 12, 0, -65496, 13, 0, -65495, 13, 0, -65494, 13, 0, -65493, 13, 0, -65492, 13, 0, -65491, 13, 0, -65490, 14, 0, -65487, 12, 0, -65486, 13, 0, -65485, 14, 0, -65477, 8, 0, -65476, 42, 0, 65529, 41, 0, 17, 10, 0, 18, 44, 0, 24, 34, 0, 25, 37, 0, 28, 37, 0, 29, 35, 0, 35, 43, 0, 36, 11, 0, 60, 42, 0, 131065, 41, 0, 65553, 28, 0, 65554, 40, 0, 65560, 10, 0, 65561, 13, 0, 65564, 13, 0, 65565, 11, 0, 65571, 39, 0, 65572, 29, 0, 65596, 42, 0, 196601, 41, 0, 196602, 37, 0, 196603, 40, 0, 131073, 39, 0, 131074, 37, 0, 131075, 37, 0, 131076, 35, 0, 131079, 34, 0, 131080, 37, 0, 131081, 37, 0, 131082, 37, 0, 131083, 37, 0, 131084, 37, 0, 131085, 37, 0, 131086, 37, 0, 131087, 40, 0, 131089, 12, 0, 131090, 28, 0, 131091, 40, 0, 131096, 42, 0, 131101, 41, 0, 131106, 39, 0, 131107, 29, 0, 131108, 14, 0, 131110, 39, 0, 131111, 37, 0, 131112, 37, 0, 131113, 37, 0, 131114, 37, 0, 131115, 37, 0, 131116, 37, 0, 131117, 37, 0, 131118, 31, 0, 131121, 30, 0, 131122, 37, 0, 131123, 37, 0, 131124, 40, 0, 131130, 39, 0, 131131, 37, 0, 131132, 42, 0, 262137, 43, 0, 262138, 13, 0, 262139, 28, 0, 262140, 40, 0, 196608, 39, 0, 196609, 29, 0, 196610, 13, 0, 196611, 13, 0, 196612, 536870922, 0, 196615, 536870923, 0, 196616, 13, 0, 196617, 13, 0, 196618, 13, 0, 196619, 13, 0, 196620, 13, 0, 196621, 13, 0, 196622, 14, 0, 196623, 28, 0, 196624, 40, 0, 196626, 12, 0, 196627, 28, 0, 196628, 37, 0, 196629, 37, 0, 196630, 37, 0, 196631, 37, 0, 196632, 42, 0, 196637, 41, 0, 196638, 37, 0, 196639, 37, 0, 196640, 37, 0, 196641, 37, 0, 196642, 29, 0, 196643, 14, 0, 196645, 39, 0, 196646, 29, 0, 196647, 13, 0, 196648, 13, 0, 196649, 13, 0, 196650, 13, 0, 196651, 13, 0, 196652, 13, 0, 196653, 13, 0, 196654, 536870922, 0, 196657, 536870923, 0, 196658, 13, 0, 196659, 13, 0, 196660, 28, 0, 196661, 40, 0, 196665, 39, 0, 196666, 29, 0, 196667, 13, 0, 196668, 44, 0, 327675, 12, 0, 327676, 28, 0, 327677, 37, 0, 327678, 37, 0, 327679, 37, 0, 262144, 29, 0, 262145, 14, 0, 262148, 41, 0, 262151, 42, 0, 262159, 12, 0, 262160, 28, 0, 262161, 40, 0, 262163, 12, 0, 262164, 13, 0, 262165, 13, 0, 262166, 13, 0, 262167, 13, 0, 262168, 44, 0, 262173, 43, 0, 262174, 13, 0, 262175, 13, 0, 262176, 13, 0, 262177, 13, 0, 262178, 14, 0, 262180, 39, 0, 262181, 29, 0, 262182, 14, 0, 262190, 536870954, 0, 262193, 536870953, 0, 262196, 12, 0, 262197, 28, 0, 262198, 37, 0, 262199, 37, 0, 262200, 37, 0, 262201, 29, 0, 262202, 14, 0, 393212, 12, 0, 393213, 13, 0, 393214, 13, 0, 393215, 13, 0, 327680, 14, 0, 327684, 41, 0, 327687, 42, 0, 327696, 12, 0, 327697, 28, 0, 327698, 40, 0, 327715, 39, 0, 327716, 29, 0, 327717, 14, 0, 327726, 536870954, 0, 327729, 536870953, 0, 327733, 12, 0, 327734, 13, 0, 327735, 13, 0, 327736, 13, 0, 327737, 14, 0, 393219, 39, 0, 393220, 29, 0, 393223, 28, 0, 393224, 40, 0, 393233, 12, 0, 393234, 28, 0, 393235, 37, 0, 393236, 37, 0, 393237, 37, 0, 393238, 37, 0, 393239, 37, 0, 393240, 40, 0, 393245, 39, 0, 393246, 37, 0, 393247, 37, 0, 393248, 37, 0, 393249, 37, 0, 393250, 37, 0, 393251, 29, 0, 393252, 14, 0, 393261, 39, 0, 393262, 29, 0, 393265, 28, 0, 393266, 40, 0, 458755, 41, 0, 458756, 14, 0, 458759, 12, 0, 458760, 42, 0, 458770, 12, 0, 458771, 13, 0, 458772, 13, 0, 458773, 13, 0, 458774, 13, 0, 458775, 13, 0, 458776, 42, 0, 458781, 41, 0, 458782, 13, 0, 458783, 13, 0, 458784, 13, 0, 458785, 13, 0, 458786, 13, 0, 458787, 14, 0, 458797, 1610612778, 0, 458798, 14, 0, 458801, 8, 0, 458802, 1610612777, 0, 524291, 41, 0, 524296, 42, 0, 524312, 42, 0, 524317, 41, 0, 524333, 536870954, 0, 524338, 536870953, 0, 589827, 41, 0, 589832, 42, 0, 589848, 42, 0, 589853, 41, 0, 589869, 536870954, 0, 589874, 536870953, 0, 655363, 41, 0, 655364, 37, 0, 655365, 37, 0, 655366, 37, 0, 655367, 37, 0, 655368, 42, 0, 655384, 42, 0, 655389, 41, 0, 655405, 536870954, 0, 655406, 37, 0, 655407, 37, 0, 655408, 37, 0, 655409, 37, 0, 655410, 536870953, 0, 720899, 43, 0, 720900, 13, 0, 720901, 13, 0, 720902, 13, 0, 720903, 13, 0, 720904, 44, 0, 720920, 42, 0, 720925, 41, 0, 720941, 43, 0, 720942, 13, 0, 720943, 13, 0, 720944, 13, 0, 720945, 13, 0, 720946, 44, 0, 786456, 42, 0, 786461, 41, 0, 851992, 42, 0, 851997, 41, 0, 917528, 42, 0, 917533, 41, 0, 983064, 42, 0, 983069, 41, 0, 1048600, 42, 0, 1048605, 41, 0, 1114136, 42, 0, 1114141, 41, 0, 1179672, 42, 0, 1179677, 41, 0, 1245206, 34, 0, 1245207, 37, 0, 1245208, 42, 0, 1245213, 41, 0, 1245214, 37, 0, 1245215, 35, 0, 1310740, 34, 0, 1310741, 37, 0, 1310742, 10, 0, 1310743, 13, 0, 1310744, 44, 0, 1310749, 43, 0, 1310750, 13, 0, 1310751, 11, 0, 1310752, 37, 0, 1310753, 35, 0, 1376275, 34, 0, 1376276, 10, 0, 1376277, 13, 0, 1376278, 44, 0, 1376287, 43, 0, 1376288, 13, 0, 1376289, 11, 0, 1376290, 35, 0, 1441810, 34, 0, 1441811, 10, 0, 1441812, 44, 0, 1441825, 43, 0, 1441826, 11, 0, 1441827, 35, 0, 1507346, 10, 0, 1507347, 44, 0, 1507362, 43, 0, 1507363, 11, 0, 1572882, 42, 0, 1572899, 41, 0, 1638418, 42, 0, 1638435, 41, 0, 1703954, 28, 0, 1703955, 40, 0, 1703970, 39, 0, 1703971, 29, 0, 1769490, 12, 0, 1769491, 28, 0, 1769492, 40, 0, 1769505, 39, 0, 1769506, 29, 0, 1769507, 14, 0, 1835027, 12, 0, 1835028, 28, 0, 1835029, 37, 0, 1835030, 40, 0, 1835039, 39, 0, 1835040, 37, 0, 1835041, 29, 0, 1835042, 14, 0, 1900564, 12, 0, 1900565, 14, 0, 1900566, 28, 0, 1900567, 37, 0, 1900568, 37, 0, 1900569, 37, 0, 1900570, 37, 0, 1900571, 37, 0, 1900572, 37, 0, 1900573, 37, 0, 1900574, 37, 0, 1900575, 29, 0, 1900576, 12, 0, 1900577, 14, 0, 1966102, 12, 0, 1966103, 13, 0, 1966104, 13, 0, 1966105, 13, 0, 1966106, 13, 0, 1966107, 13, 0, 1966108, 13, 0, 1966109, 13, 0, 1966110, 13, 0, 1966111, 14, 0 )

[node name="ChestEmpty" parent="." instance=ExtResource( 6 )]
position = Vector2( 352, 376 )

[node name="ChestEmpty2" parent="." instance=ExtResource( 6 )]
position = Vector2( 352, 408 )

[node name="ChestEmpty3" parent="." instance=ExtResource( 6 )]
position = Vector2( 376, 440 )

[node name="ChestEmpty4" parent="." instance=ExtResource( 6 )]
position = Vector2( 416, 440 )

[node name="ChestEmpty5" parent="." instance=ExtResource( 6 )]
position = Vector2( 456, 440 )

[node name="ChestEmpty6" parent="." instance=ExtResource( 6 )]
position = Vector2( 496, 440 )

[node name="ChestEmpty7" parent="." instance=ExtResource( 6 )]
position = Vector2( 512, 376 )

[node name="ChestEmpty8" parent="." instance=ExtResource( 6 )]
position = Vector2( 497, -61 )

[node name="ChestEmpty9" parent="." instance=ExtResource( 6 )]
position = Vector2( 768, -120 )

[node name="ChestEmpty10" parent="." instance=ExtResource( 6 )]
position = Vector2( 944, 16 )

[node name="ChestEmpty11" parent="." instance=ExtResource( 6 )]
position = Vector2( 96, 152 )

[node name="ChestEmpty12" parent="." instance=ExtResource( 6 )]
position = Vector2( 96, -120 )

[node name="ChestFull1" parent="." instance=ExtResource( 5 )]
position = Vector2( 512, 408 )

[node name="ChestFull2" parent="." instance=ExtResource( 5 )]
position = Vector2( 364, -61 )

[node name="ChestFull3" parent="." instance=ExtResource( 5 )]
position = Vector2( -80, 16 )

[node name="ChestFull4" parent="." instance=ExtResource( 5 )]
position = Vector2( 768, 152 )

[node name="Door2to3" parent="." instance=ExtResource( 14 )]
position = Vector2( 432, 16 )

[node name="GreenBottle" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 512, 416.5 )

[node name="YellowBottle" parent="." instance=ExtResource( 9 )]
visible = false
position = Vector2( 364, -52.5 )

[node name="RedBottle" parent="." instance=ExtResource( 12 )]
visible = false
position = Vector2( -80, 24.5 )

[node name="BlueBottle" parent="." instance=ExtResource( 13 )]
visible = false
position = Vector2( 768, 160.5 )

[node name="WaterBlue2" parent="." instance=ExtResource( 22 )]
position = Vector2( 536, 72 )

[node name="WaterBlue3" parent="." instance=ExtResource( 22 )]
position = Vector2( 504, 72 )

[node name="WaterBlue4" parent="." instance=ExtResource( 22 )]
position = Vector2( 648, -8 )

[node name="WaterBlue5" parent="." instance=ExtResource( 22 )]
position = Vector2( 680, -8 )

[node name="WaterBlue6" parent="." instance=ExtResource( 22 )]
position = Vector2( 712, -8 )

[node name="WaterRed" parent="." instance=ExtResource( 21 )]
position = Vector2( 328, 72 )

[node name="WaterRed3" parent="." instance=ExtResource( 21 )]
position = Vector2( 360, 72 )

[node name="WaterRed2" parent="." instance=ExtResource( 21 )]
position = Vector2( 216, -8 )

[node name="WaterRed4" parent="." instance=ExtResource( 21 )]
position = Vector2( 184, -8 )

[node name="WaterRed5" parent="." instance=ExtResource( 21 )]
position = Vector2( 152, -8 )

[node name="YSort" type="YSort" parent="."]

[node name="BlueMan" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( 432, 128 )

[node name="BlueMan2" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( 432, 280 )

[node name="BrownMan" parent="YSort" instance=ExtResource( 3 )]
position = Vector2( 432, 168 )

[node name="BrownMan2" parent="YSort" instance=ExtResource( 3 )]
position = Vector2( 432, 320 )

[node name="TreeMan" parent="YSort" instance=ExtResource( 8 )]
position = Vector2( 319, -57 )

[node name="TreeMan2" parent="YSort" instance=ExtResource( 8 )]
position = Vector2( 546, -59 )

[node name="SlimeMan" parent="YSort" instance=ExtResource( 10 )]
position = Vector2( 864, 16 )

[node name="SlimeMan2" parent="YSort" instance=ExtResource( 10 )]
position = Vector2( 0, 16 )

[node name="WhiteMan" parent="YSort" instance=ExtResource( 11 )]
position = Vector2( 904, 16 )

[node name="WhiteMan2" parent="YSort" instance=ExtResource( 11 )]
position = Vector2( -40, 16 )

[node name="Player" parent="YSort" instance=ExtResource( 1 )]
position = Vector2( 432, 216 )

[node name="Level" type="Node2D" parent="YSort/Player"]
position = Vector2( -40, -22 )

[node name="L1" type="Sprite" parent="YSort/Player/Level"]
position = Vector2( 19, -43 )
texture = ExtResource( 19 )
hframes = 10
vframes = 5
frame = 21

[node name="Light2D" type="Light2D" parent="YSort/Player/Level/L1"]
texture = ExtResource( 16 )
energy = 0.7

[node name="E2" type="Sprite" parent="YSort/Player/Level"]
position = Vector2( 27, -43 )
texture = ExtResource( 19 )
hframes = 10
vframes = 5
frame = 14

[node name="Light2D" type="Light2D" parent="YSort/Player/Level/E2"]
texture = ExtResource( 20 )
energy = 0.7

[node name="V3" type="Sprite" parent="YSort/Player/Level"]
position = Vector2( 35, -43 )
texture = ExtResource( 19 )
hframes = 10
vframes = 5
frame = 31

[node name="Light2D" type="Light2D" parent="YSort/Player/Level/V3"]
texture = ExtResource( 17 )
energy = 0.7

[node name="E4" type="Sprite" parent="YSort/Player/Level"]
position = Vector2( 43, -43 )
texture = ExtResource( 19 )
hframes = 10
vframes = 5
frame = 14

[node name="Light2D" type="Light2D" parent="YSort/Player/Level/E4"]
texture = ExtResource( 20 )
energy = 0.7

[node name="L5" type="Sprite" parent="YSort/Player/Level"]
position = Vector2( 51, -43 )
texture = ExtResource( 19 )
hframes = 10
vframes = 5
frame = 21

[node name="Light2D" type="Light2D" parent="YSort/Player/Level/L5"]
texture = ExtResource( 16 )
energy = 0.7

[node name="1" type="Sprite" parent="YSort/Player/Level"]
position = Vector2( 62, -43 )
texture = ExtResource( 19 )
hframes = 10
vframes = 5
frame = 2

[node name="Light2D" type="Light2D" parent="YSort/Player/Level/1"]
texture = ExtResource( 18 )
energy = 0.7

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.380392, 0.380392, 0.380392, 1 )

[node name="HitSound" parent="." instance=ExtResource( 23 )]

[connection signal="tree_exited" from="GreenBottle" to="." method="_on_GreenBottle_tree_exited"]
[connection signal="tree_exited" from="YellowBottle" to="." method="_on_YellowBottle_tree_exited"]
[connection signal="tree_exited" from="RedBottle" to="." method="_on_RedBottle_tree_exited"]
[connection signal="tree_exited" from="BlueBottle" to="." method="_on_BlueBottle_tree_exited"]
[connection signal="tree_exited" from="YSort/BlueMan" to="." method="_on_BlueMan_tree_exited"]
[connection signal="tree_exited" from="YSort/BlueMan2" to="." method="_on_BlueMan2_tree_exited"]
[connection signal="tree_exited" from="YSort/BrownMan" to="." method="_on_BrownMan_tree_exited"]
[connection signal="tree_exited" from="YSort/BrownMan2" to="." method="_on_BrownMan2_tree_exited"]
[connection signal="tree_exited" from="YSort/TreeMan" to="." method="_on_TreeMan_tree_exited"]
[connection signal="tree_exited" from="YSort/TreeMan2" to="." method="_on_TreeMan2_tree_exited"]
[connection signal="tree_exited" from="YSort/SlimeMan" to="." method="_on_SlimeMan_tree_exited"]
[connection signal="tree_exited" from="YSort/SlimeMan2" to="." method="_on_SlimeMan2_tree_exited"]
[connection signal="tree_exited" from="YSort/WhiteMan" to="." method="_on_WhiteMan_tree_exited"]
[connection signal="tree_exited" from="YSort/WhiteMan2" to="." method="_on_WhiteMan2_tree_exited"]
